sprint3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration SEMICOLON
Rule 3     identifier_list -> identifier
Rule 4     lower_identifier_list -> ID_LOWER
Rule 5     typesum -> constrdef
Rule 6     type_list -> type_atom
Rule 7     case_list -> case_statement SEMICOLON
Rule 8     declaration_list -> declaration SEMICOLON declaration_list
Rule 9     identifier_list -> identifier identifier_list
Rule 10    lower_identifier_list -> ID_LOWER identifier_list
Rule 11    typesum -> constrdef BAR typesum
Rule 12    type_list -> type_atom type_list
Rule 13    case_list -> case_statement SEMICOLON case_list
Rule 14    declaration -> datadef
Rule 15    declaration -> funcdef
Rule 16    function_type -> type_constr_app ARROW function_type
Rule 17    type_constr_app -> type_constr_app type_atom
Rule 18    type_atom -> identifier
Rule 19    function_type -> type_constr_app
Rule 20    type_constr_app -> type_atom
Rule 21    type -> function_type
Rule 22    type_atom -> LPAREN type RPAREN
Rule 23    datadef -> DATA typename EQUAL typesum
Rule 24    typename -> ID_UPPER
Rule 25    typename -> ID_UPPER lower_identifier_list
Rule 26    constrdef -> ID_UPPER
Rule 27    constrdef -> ID_UPPER type_list
Rule 28    funcdef -> functype SEMICOLON funcbody
Rule 29    functype -> prefix_name DOUBLE_COLON type
Rule 30    funcbody -> func_sig EQUAL expr
Rule 31    func_sig -> prefix_def
Rule 32    func_sig -> infix_def
Rule 33    prefix_def -> prefix_name
Rule 34    prefix_def -> prefix_def ID_LOWER
Rule 35    infix_def -> ID_LOWER infix_name ID_LOWER
Rule 36    prefix_name -> ID_LOWER
Rule 37    prefix_name -> LPAREN infix_operator RPAREN
Rule 38    infix_name -> infix_operator
Rule 39    expr -> infix_operation
Rule 40    expr -> case
Rule 41    infix_operation -> precedence_9
Rule 42    precedence_neg1 -> func_call
Rule 43    func_call -> atom
Rule 44    func_call -> func_call atom
Rule 45    case -> CASE expr OF LBRACE case_list RBRACE
Rule 46    case_statement -> pattern_match ARROW expr
Rule 47    pattern_match -> ID_UPPER
Rule 48    pattern_match -> pattern_match ID_LOWER
Rule 49    atom -> literal
Rule 50    atom -> identifier
Rule 51    atom -> LPAREN expr RPAREN
Rule 52    identifier -> ID_UPPER
Rule 53    identifier -> ID_LOWER
Rule 54    literal -> STRING
Rule 55    literal -> NUMBER
Rule 56    literal -> CHAR
Rule 57    infix_operator -> INFIX_0_L
Rule 58    infix_operator -> INFIX_0_I
Rule 59    infix_operator -> INFIX_0_R
Rule 60    infix_operator -> INFIX_1_L
Rule 61    infix_operator -> INFIX_1_I
Rule 62    infix_operator -> INFIX_1_R
Rule 63    infix_operator -> INFIX_2_L
Rule 64    infix_operator -> INFIX_2_I
Rule 65    infix_operator -> INFIX_2_R
Rule 66    infix_operator -> INFIX_3_L
Rule 67    infix_operator -> INFIX_3_I
Rule 68    infix_operator -> INFIX_3_R
Rule 69    infix_operator -> INFIX_4_L
Rule 70    infix_operator -> INFIX_4_I
Rule 71    infix_operator -> INFIX_4_R
Rule 72    infix_operator -> INFIX_5_L
Rule 73    infix_operator -> INFIX_5_I
Rule 74    infix_operator -> INFIX_5_R
Rule 75    infix_operator -> INFIX_6_L
Rule 76    infix_operator -> INFIX_6_I
Rule 77    infix_operator -> INFIX_6_R
Rule 78    infix_operator -> INFIX_7_L
Rule 79    infix_operator -> INFIX_7_I
Rule 80    infix_operator -> INFIX_7_R
Rule 81    infix_operator -> INFIX_8_L
Rule 82    infix_operator -> INFIX_8_I
Rule 83    infix_operator -> INFIX_8_R
Rule 84    infix_operator -> INFIX_9_L
Rule 85    infix_operator -> INFIX_9_I
Rule 86    infix_operator -> INFIX_9_R
Rule 87    precedence_0_l -> precedence_neg1 INFIX_0_L precedence_neg1
Rule 88    precedence_0_l -> precedence_0_l INFIX_0_L precedence_neg1
Rule 89    precedence_0_i -> precedence_neg1 INFIX_0_I precedence_neg1
Rule 90    precedence_0_r -> precedence_neg1 INFIX_0_R precedence_neg1
Rule 91    precedence_0_r -> precedence_neg1 INFIX_0_R precedence_0_r
Rule 92    precedence_1_l -> precedence_0 INFIX_1_L precedence_0
Rule 93    precedence_1_l -> precedence_1_l INFIX_1_L precedence_0
Rule 94    precedence_1_i -> precedence_0 INFIX_1_I precedence_0
Rule 95    precedence_1_r -> precedence_0 INFIX_1_R precedence_0
Rule 96    precedence_1_r -> precedence_0 INFIX_1_R precedence_1_r
Rule 97    precedence_2_l -> precedence_1 INFIX_2_L precedence_1
Rule 98    precedence_2_l -> precedence_2_l INFIX_2_L precedence_1
Rule 99    precedence_2_i -> precedence_1 INFIX_2_I precedence_1
Rule 100   precedence_2_r -> precedence_1 INFIX_2_R precedence_1
Rule 101   precedence_2_r -> precedence_1 INFIX_2_R precedence_2_r
Rule 102   precedence_3_l -> precedence_2 INFIX_3_L precedence_2
Rule 103   precedence_3_l -> precedence_3_l INFIX_3_L precedence_2
Rule 104   precedence_3_i -> precedence_2 INFIX_3_I precedence_2
Rule 105   precedence_3_r -> precedence_2 INFIX_3_R precedence_2
Rule 106   precedence_3_r -> precedence_2 INFIX_3_R precedence_3_r
Rule 107   precedence_4_l -> precedence_3 INFIX_4_L precedence_3
Rule 108   precedence_4_l -> precedence_4_l INFIX_4_L precedence_3
Rule 109   precedence_4_i -> precedence_3 INFIX_4_I precedence_3
Rule 110   precedence_4_r -> precedence_3 INFIX_4_R precedence_3
Rule 111   precedence_4_r -> precedence_3 INFIX_4_R precedence_4_r
Rule 112   precedence_5_l -> precedence_4 INFIX_5_L precedence_4
Rule 113   precedence_5_l -> precedence_5_l INFIX_5_L precedence_4
Rule 114   precedence_5_i -> precedence_4 INFIX_5_I precedence_4
Rule 115   precedence_5_r -> precedence_4 INFIX_5_R precedence_4
Rule 116   precedence_5_r -> precedence_4 INFIX_5_R precedence_5_r
Rule 117   precedence_6_l -> precedence_5 INFIX_6_L precedence_5
Rule 118   precedence_6_l -> precedence_6_l INFIX_6_L precedence_5
Rule 119   precedence_6_i -> precedence_5 INFIX_6_I precedence_5
Rule 120   precedence_6_r -> precedence_5 INFIX_6_R precedence_5
Rule 121   precedence_6_r -> precedence_5 INFIX_6_R precedence_6_r
Rule 122   precedence_7_l -> precedence_6 INFIX_7_L precedence_6
Rule 123   precedence_7_l -> precedence_7_l INFIX_7_L precedence_6
Rule 124   precedence_7_i -> precedence_6 INFIX_7_I precedence_6
Rule 125   precedence_7_r -> precedence_6 INFIX_7_R precedence_6
Rule 126   precedence_7_r -> precedence_6 INFIX_7_R precedence_7_r
Rule 127   precedence_8_l -> precedence_7 INFIX_8_L precedence_7
Rule 128   precedence_8_l -> precedence_8_l INFIX_8_L precedence_7
Rule 129   precedence_8_i -> precedence_7 INFIX_8_I precedence_7
Rule 130   precedence_8_r -> precedence_7 INFIX_8_R precedence_7
Rule 131   precedence_8_r -> precedence_7 INFIX_8_R precedence_8_r
Rule 132   precedence_9_l -> precedence_8 INFIX_9_L precedence_8
Rule 133   precedence_9_l -> precedence_9_l INFIX_9_L precedence_8
Rule 134   precedence_9_i -> precedence_8 INFIX_9_I precedence_8
Rule 135   precedence_9_r -> precedence_8 INFIX_9_R precedence_8
Rule 136   precedence_9_r -> precedence_8 INFIX_9_R precedence_9_r
Rule 137   precedence_0 -> precedence_0_l
Rule 138   precedence_0 -> precedence_0_i
Rule 139   precedence_0 -> precedence_0_r
Rule 140   precedence_0 -> precedence_neg1
Rule 141   precedence_1 -> precedence_1_l
Rule 142   precedence_1 -> precedence_1_i
Rule 143   precedence_1 -> precedence_1_r
Rule 144   precedence_1 -> precedence_0
Rule 145   precedence_2 -> precedence_2_l
Rule 146   precedence_2 -> precedence_2_i
Rule 147   precedence_2 -> precedence_2_r
Rule 148   precedence_2 -> precedence_1
Rule 149   precedence_3 -> precedence_3_l
Rule 150   precedence_3 -> precedence_3_i
Rule 151   precedence_3 -> precedence_3_r
Rule 152   precedence_3 -> precedence_2
Rule 153   precedence_4 -> precedence_4_l
Rule 154   precedence_4 -> precedence_4_i
Rule 155   precedence_4 -> precedence_4_r
Rule 156   precedence_4 -> precedence_3
Rule 157   precedence_5 -> precedence_5_l
Rule 158   precedence_5 -> precedence_5_i
Rule 159   precedence_5 -> precedence_5_r
Rule 160   precedence_5 -> precedence_4
Rule 161   precedence_6 -> precedence_6_l
Rule 162   precedence_6 -> precedence_6_i
Rule 163   precedence_6 -> precedence_6_r
Rule 164   precedence_6 -> precedence_5
Rule 165   precedence_7 -> precedence_7_l
Rule 166   precedence_7 -> precedence_7_i
Rule 167   precedence_7 -> precedence_7_r
Rule 168   precedence_7 -> precedence_6
Rule 169   precedence_8 -> precedence_8_l
Rule 170   precedence_8 -> precedence_8_i
Rule 171   precedence_8 -> precedence_8_r
Rule 172   precedence_8 -> precedence_7
Rule 173   precedence_9 -> precedence_9_l
Rule 174   precedence_9 -> precedence_9_i
Rule 175   precedence_9 -> precedence_9_r
Rule 176   precedence_9 -> precedence_8

Terminals, with rules where they appear

ARROW                : 16 46
BAR                  : 11
CASE                 : 45
CHAR                 : 56
DATA                 : 23
DOUBLE_COLON         : 29
EQUAL                : 23 30
ID_LOWER             : 4 10 34 35 35 36 48 53
ID_UPPER             : 24 25 26 27 47 52
INFIX_0_I            : 58 89
INFIX_0_L            : 57 87 88
INFIX_0_R            : 59 90 91
INFIX_1_I            : 61 94
INFIX_1_L            : 60 92 93
INFIX_1_R            : 62 95 96
INFIX_2_I            : 64 99
INFIX_2_L            : 63 97 98
INFIX_2_R            : 65 100 101
INFIX_3_I            : 67 104
INFIX_3_L            : 66 102 103
INFIX_3_R            : 68 105 106
INFIX_4_I            : 70 109
INFIX_4_L            : 69 107 108
INFIX_4_R            : 71 110 111
INFIX_5_I            : 73 114
INFIX_5_L            : 72 112 113
INFIX_5_R            : 74 115 116
INFIX_6_I            : 76 119
INFIX_6_L            : 75 117 118
INFIX_6_R            : 77 120 121
INFIX_7_I            : 79 124
INFIX_7_L            : 78 122 123
INFIX_7_R            : 80 125 126
INFIX_8_I            : 82 129
INFIX_8_L            : 81 127 128
INFIX_8_R            : 83 130 131
INFIX_9_I            : 85 134
INFIX_9_L            : 84 132 133
INFIX_9_R            : 86 135 136
LBRACE               : 45
LPAREN               : 22 37 51
NUMBER               : 55
OF                   : 45
RBRACE               : 45
RPAREN               : 22 37 51
SEMICOLON            : 2 7 8 13 28
STRING               : 54
error                : 

Nonterminals, with rules where they appear

atom                 : 43 44
case                 : 40
case_list            : 13 45
case_statement       : 7 13
constrdef            : 5 11
datadef              : 14
declaration          : 2 8
declaration_list     : 1 8
expr                 : 30 45 46 51
func_call            : 42 44
func_sig             : 30
funcbody             : 28
funcdef              : 15
function_type        : 16 21
functype             : 28
identifier           : 3 9 18 50
identifier_list      : 9 10
infix_def            : 32
infix_name           : 35
infix_operation      : 39
infix_operator       : 37 38
literal              : 49
lower_identifier_list : 25
pattern_match        : 46 48
precedence_0         : 92 92 93 94 94 95 95 96 144
precedence_0_i       : 138
precedence_0_l       : 88 137
precedence_0_r       : 91 139
precedence_1         : 97 97 98 99 99 100 100 101 148
precedence_1_i       : 142
precedence_1_l       : 93 141
precedence_1_r       : 96 143
precedence_2         : 102 102 103 104 104 105 105 106 152
precedence_2_i       : 146
precedence_2_l       : 98 145
precedence_2_r       : 101 147
precedence_3         : 107 107 108 109 109 110 110 111 156
precedence_3_i       : 150
precedence_3_l       : 103 149
precedence_3_r       : 106 151
precedence_4         : 112 112 113 114 114 115 115 116 160
precedence_4_i       : 154
precedence_4_l       : 108 153
precedence_4_r       : 111 155
precedence_5         : 117 117 118 119 119 120 120 121 164
precedence_5_i       : 158
precedence_5_l       : 113 157
precedence_5_r       : 116 159
precedence_6         : 122 122 123 124 124 125 125 126 168
precedence_6_i       : 162
precedence_6_l       : 118 161
precedence_6_r       : 121 163
precedence_7         : 127 127 128 129 129 130 130 131 172
precedence_7_i       : 166
precedence_7_l       : 123 165
precedence_7_r       : 126 167
precedence_8         : 132 132 133 134 134 135 135 136 176
precedence_8_i       : 170
precedence_8_l       : 128 169
precedence_8_r       : 131 171
precedence_9         : 41
precedence_9_i       : 174
precedence_9_l       : 133 173
precedence_9_r       : 136 175
precedence_neg1      : 87 87 88 89 89 90 90 91 140
prefix_def           : 31 34
prefix_name          : 29 33
program              : 0
type                 : 22 29
type_atom            : 6 12 17 20
type_constr_app      : 16 17 19
type_list            : 12 27
typename             : 23
typesum              : 11 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration SEMICOLON
    (8) declaration_list -> . declaration SEMICOLON declaration_list
    (14) declaration -> . datadef
    (15) declaration -> . funcdef
    (23) datadef -> . DATA typename EQUAL typesum
    (28) funcdef -> . functype SEMICOLON funcbody
    (29) functype -> . prefix_name DOUBLE_COLON type
    (36) prefix_name -> . ID_LOWER
    (37) prefix_name -> . LPAREN infix_operator RPAREN

    DATA            shift and go to state 6
    ID_LOWER        shift and go to state 9
    LPAREN          shift and go to state 10

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    datadef                        shift and go to state 4
    funcdef                        shift and go to state 5
    functype                       shift and go to state 7
    prefix_name                    shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .

    $end            reduce using rule 1 (program -> declaration_list .)


state 3

    (2) declaration_list -> declaration . SEMICOLON
    (8) declaration_list -> declaration . SEMICOLON declaration_list

    SEMICOLON       shift and go to state 11


state 4

    (14) declaration -> datadef .

    SEMICOLON       reduce using rule 14 (declaration -> datadef .)


state 5

    (15) declaration -> funcdef .

    SEMICOLON       reduce using rule 15 (declaration -> funcdef .)


state 6

    (23) datadef -> DATA . typename EQUAL typesum
    (24) typename -> . ID_UPPER
    (25) typename -> . ID_UPPER lower_identifier_list

    ID_UPPER        shift and go to state 13

    typename                       shift and go to state 12

state 7

    (28) funcdef -> functype . SEMICOLON funcbody

    SEMICOLON       shift and go to state 14


state 8

    (29) functype -> prefix_name . DOUBLE_COLON type

    DOUBLE_COLON    shift and go to state 15


state 9

    (36) prefix_name -> ID_LOWER .

    DOUBLE_COLON    reduce using rule 36 (prefix_name -> ID_LOWER .)


state 10

    (37) prefix_name -> LPAREN . infix_operator RPAREN
    (57) infix_operator -> . INFIX_0_L
    (58) infix_operator -> . INFIX_0_I
    (59) infix_operator -> . INFIX_0_R
    (60) infix_operator -> . INFIX_1_L
    (61) infix_operator -> . INFIX_1_I
    (62) infix_operator -> . INFIX_1_R
    (63) infix_operator -> . INFIX_2_L
    (64) infix_operator -> . INFIX_2_I
    (65) infix_operator -> . INFIX_2_R
    (66) infix_operator -> . INFIX_3_L
    (67) infix_operator -> . INFIX_3_I
    (68) infix_operator -> . INFIX_3_R
    (69) infix_operator -> . INFIX_4_L
    (70) infix_operator -> . INFIX_4_I
    (71) infix_operator -> . INFIX_4_R
    (72) infix_operator -> . INFIX_5_L
    (73) infix_operator -> . INFIX_5_I
    (74) infix_operator -> . INFIX_5_R
    (75) infix_operator -> . INFIX_6_L
    (76) infix_operator -> . INFIX_6_I
    (77) infix_operator -> . INFIX_6_R
    (78) infix_operator -> . INFIX_7_L
    (79) infix_operator -> . INFIX_7_I
    (80) infix_operator -> . INFIX_7_R
    (81) infix_operator -> . INFIX_8_L
    (82) infix_operator -> . INFIX_8_I
    (83) infix_operator -> . INFIX_8_R
    (84) infix_operator -> . INFIX_9_L
    (85) infix_operator -> . INFIX_9_I
    (86) infix_operator -> . INFIX_9_R

    INFIX_0_L       shift and go to state 17
    INFIX_0_I       shift and go to state 18
    INFIX_0_R       shift and go to state 19
    INFIX_1_L       shift and go to state 20
    INFIX_1_I       shift and go to state 21
    INFIX_1_R       shift and go to state 22
    INFIX_2_L       shift and go to state 23
    INFIX_2_I       shift and go to state 24
    INFIX_2_R       shift and go to state 25
    INFIX_3_L       shift and go to state 26
    INFIX_3_I       shift and go to state 27
    INFIX_3_R       shift and go to state 28
    INFIX_4_L       shift and go to state 29
    INFIX_4_I       shift and go to state 30
    INFIX_4_R       shift and go to state 31
    INFIX_5_L       shift and go to state 32
    INFIX_5_I       shift and go to state 33
    INFIX_5_R       shift and go to state 34
    INFIX_6_L       shift and go to state 35
    INFIX_6_I       shift and go to state 36
    INFIX_6_R       shift and go to state 37
    INFIX_7_L       shift and go to state 38
    INFIX_7_I       shift and go to state 39
    INFIX_7_R       shift and go to state 40
    INFIX_8_L       shift and go to state 41
    INFIX_8_I       shift and go to state 42
    INFIX_8_R       shift and go to state 43
    INFIX_9_L       shift and go to state 44
    INFIX_9_I       shift and go to state 45
    INFIX_9_R       shift and go to state 46

    infix_operator                 shift and go to state 16

state 11

    (2) declaration_list -> declaration SEMICOLON .
    (8) declaration_list -> declaration SEMICOLON . declaration_list
    (2) declaration_list -> . declaration SEMICOLON
    (8) declaration_list -> . declaration SEMICOLON declaration_list
    (14) declaration -> . datadef
    (15) declaration -> . funcdef
    (23) datadef -> . DATA typename EQUAL typesum
    (28) funcdef -> . functype SEMICOLON funcbody
    (29) functype -> . prefix_name DOUBLE_COLON type
    (36) prefix_name -> . ID_LOWER
    (37) prefix_name -> . LPAREN infix_operator RPAREN

    $end            reduce using rule 2 (declaration_list -> declaration SEMICOLON .)
    DATA            shift and go to state 6
    ID_LOWER        shift and go to state 9
    LPAREN          shift and go to state 10

    declaration                    shift and go to state 3
    declaration_list               shift and go to state 47
    datadef                        shift and go to state 4
    funcdef                        shift and go to state 5
    functype                       shift and go to state 7
    prefix_name                    shift and go to state 8

state 12

    (23) datadef -> DATA typename . EQUAL typesum

    EQUAL           shift and go to state 48


state 13

    (24) typename -> ID_UPPER .
    (25) typename -> ID_UPPER . lower_identifier_list
    (4) lower_identifier_list -> . ID_LOWER
    (10) lower_identifier_list -> . ID_LOWER identifier_list

    EQUAL           reduce using rule 24 (typename -> ID_UPPER .)
    ID_LOWER        shift and go to state 50

    lower_identifier_list          shift and go to state 49

state 14

    (28) funcdef -> functype SEMICOLON . funcbody
    (30) funcbody -> . func_sig EQUAL expr
    (31) func_sig -> . prefix_def
    (32) func_sig -> . infix_def
    (33) prefix_def -> . prefix_name
    (34) prefix_def -> . prefix_def ID_LOWER
    (35) infix_def -> . ID_LOWER infix_name ID_LOWER
    (36) prefix_name -> . ID_LOWER
    (37) prefix_name -> . LPAREN infix_operator RPAREN

    ID_LOWER        shift and go to state 56
    LPAREN          shift and go to state 10

    funcbody                       shift and go to state 51
    func_sig                       shift and go to state 52
    prefix_def                     shift and go to state 53
    infix_def                      shift and go to state 54
    prefix_name                    shift and go to state 55

state 15

    (29) functype -> prefix_name DOUBLE_COLON . type
    (21) type -> . function_type
    (16) function_type -> . type_constr_app ARROW function_type
    (19) function_type -> . type_constr_app
    (17) type_constr_app -> . type_constr_app type_atom
    (20) type_constr_app -> . type_atom
    (18) type_atom -> . identifier
    (22) type_atom -> . LPAREN type RPAREN
    (52) identifier -> . ID_UPPER
    (53) identifier -> . ID_LOWER

    LPAREN          shift and go to state 62
    ID_UPPER        shift and go to state 63
    ID_LOWER        shift and go to state 64

    type                           shift and go to state 57
    function_type                  shift and go to state 58
    type_constr_app                shift and go to state 59
    type_atom                      shift and go to state 60
    identifier                     shift and go to state 61

state 16

    (37) prefix_name -> LPAREN infix_operator . RPAREN

    RPAREN          shift and go to state 65


state 17

    (57) infix_operator -> INFIX_0_L .

    RPAREN          reduce using rule 57 (infix_operator -> INFIX_0_L .)
    ID_LOWER        reduce using rule 57 (infix_operator -> INFIX_0_L .)


state 18

    (58) infix_operator -> INFIX_0_I .

    RPAREN          reduce using rule 58 (infix_operator -> INFIX_0_I .)
    ID_LOWER        reduce using rule 58 (infix_operator -> INFIX_0_I .)


state 19

    (59) infix_operator -> INFIX_0_R .

    RPAREN          reduce using rule 59 (infix_operator -> INFIX_0_R .)
    ID_LOWER        reduce using rule 59 (infix_operator -> INFIX_0_R .)


state 20

    (60) infix_operator -> INFIX_1_L .

    RPAREN          reduce using rule 60 (infix_operator -> INFIX_1_L .)
    ID_LOWER        reduce using rule 60 (infix_operator -> INFIX_1_L .)


state 21

    (61) infix_operator -> INFIX_1_I .

    RPAREN          reduce using rule 61 (infix_operator -> INFIX_1_I .)
    ID_LOWER        reduce using rule 61 (infix_operator -> INFIX_1_I .)


state 22

    (62) infix_operator -> INFIX_1_R .

    RPAREN          reduce using rule 62 (infix_operator -> INFIX_1_R .)
    ID_LOWER        reduce using rule 62 (infix_operator -> INFIX_1_R .)


state 23

    (63) infix_operator -> INFIX_2_L .

    RPAREN          reduce using rule 63 (infix_operator -> INFIX_2_L .)
    ID_LOWER        reduce using rule 63 (infix_operator -> INFIX_2_L .)


state 24

    (64) infix_operator -> INFIX_2_I .

    RPAREN          reduce using rule 64 (infix_operator -> INFIX_2_I .)
    ID_LOWER        reduce using rule 64 (infix_operator -> INFIX_2_I .)


state 25

    (65) infix_operator -> INFIX_2_R .

    RPAREN          reduce using rule 65 (infix_operator -> INFIX_2_R .)
    ID_LOWER        reduce using rule 65 (infix_operator -> INFIX_2_R .)


state 26

    (66) infix_operator -> INFIX_3_L .

    RPAREN          reduce using rule 66 (infix_operator -> INFIX_3_L .)
    ID_LOWER        reduce using rule 66 (infix_operator -> INFIX_3_L .)


state 27

    (67) infix_operator -> INFIX_3_I .

    RPAREN          reduce using rule 67 (infix_operator -> INFIX_3_I .)
    ID_LOWER        reduce using rule 67 (infix_operator -> INFIX_3_I .)


state 28

    (68) infix_operator -> INFIX_3_R .

    RPAREN          reduce using rule 68 (infix_operator -> INFIX_3_R .)
    ID_LOWER        reduce using rule 68 (infix_operator -> INFIX_3_R .)


state 29

    (69) infix_operator -> INFIX_4_L .

    RPAREN          reduce using rule 69 (infix_operator -> INFIX_4_L .)
    ID_LOWER        reduce using rule 69 (infix_operator -> INFIX_4_L .)


state 30

    (70) infix_operator -> INFIX_4_I .

    RPAREN          reduce using rule 70 (infix_operator -> INFIX_4_I .)
    ID_LOWER        reduce using rule 70 (infix_operator -> INFIX_4_I .)


state 31

    (71) infix_operator -> INFIX_4_R .

    RPAREN          reduce using rule 71 (infix_operator -> INFIX_4_R .)
    ID_LOWER        reduce using rule 71 (infix_operator -> INFIX_4_R .)


state 32

    (72) infix_operator -> INFIX_5_L .

    RPAREN          reduce using rule 72 (infix_operator -> INFIX_5_L .)
    ID_LOWER        reduce using rule 72 (infix_operator -> INFIX_5_L .)


state 33

    (73) infix_operator -> INFIX_5_I .

    RPAREN          reduce using rule 73 (infix_operator -> INFIX_5_I .)
    ID_LOWER        reduce using rule 73 (infix_operator -> INFIX_5_I .)


state 34

    (74) infix_operator -> INFIX_5_R .

    RPAREN          reduce using rule 74 (infix_operator -> INFIX_5_R .)
    ID_LOWER        reduce using rule 74 (infix_operator -> INFIX_5_R .)


state 35

    (75) infix_operator -> INFIX_6_L .

    RPAREN          reduce using rule 75 (infix_operator -> INFIX_6_L .)
    ID_LOWER        reduce using rule 75 (infix_operator -> INFIX_6_L .)


state 36

    (76) infix_operator -> INFIX_6_I .

    RPAREN          reduce using rule 76 (infix_operator -> INFIX_6_I .)
    ID_LOWER        reduce using rule 76 (infix_operator -> INFIX_6_I .)


state 37

    (77) infix_operator -> INFIX_6_R .

    RPAREN          reduce using rule 77 (infix_operator -> INFIX_6_R .)
    ID_LOWER        reduce using rule 77 (infix_operator -> INFIX_6_R .)


state 38

    (78) infix_operator -> INFIX_7_L .

    RPAREN          reduce using rule 78 (infix_operator -> INFIX_7_L .)
    ID_LOWER        reduce using rule 78 (infix_operator -> INFIX_7_L .)


state 39

    (79) infix_operator -> INFIX_7_I .

    RPAREN          reduce using rule 79 (infix_operator -> INFIX_7_I .)
    ID_LOWER        reduce using rule 79 (infix_operator -> INFIX_7_I .)


state 40

    (80) infix_operator -> INFIX_7_R .

    RPAREN          reduce using rule 80 (infix_operator -> INFIX_7_R .)
    ID_LOWER        reduce using rule 80 (infix_operator -> INFIX_7_R .)


state 41

    (81) infix_operator -> INFIX_8_L .

    RPAREN          reduce using rule 81 (infix_operator -> INFIX_8_L .)
    ID_LOWER        reduce using rule 81 (infix_operator -> INFIX_8_L .)


state 42

    (82) infix_operator -> INFIX_8_I .

    RPAREN          reduce using rule 82 (infix_operator -> INFIX_8_I .)
    ID_LOWER        reduce using rule 82 (infix_operator -> INFIX_8_I .)


state 43

    (83) infix_operator -> INFIX_8_R .

    RPAREN          reduce using rule 83 (infix_operator -> INFIX_8_R .)
    ID_LOWER        reduce using rule 83 (infix_operator -> INFIX_8_R .)


state 44

    (84) infix_operator -> INFIX_9_L .

    RPAREN          reduce using rule 84 (infix_operator -> INFIX_9_L .)
    ID_LOWER        reduce using rule 84 (infix_operator -> INFIX_9_L .)


state 45

    (85) infix_operator -> INFIX_9_I .

    RPAREN          reduce using rule 85 (infix_operator -> INFIX_9_I .)
    ID_LOWER        reduce using rule 85 (infix_operator -> INFIX_9_I .)


state 46

    (86) infix_operator -> INFIX_9_R .

    RPAREN          reduce using rule 86 (infix_operator -> INFIX_9_R .)
    ID_LOWER        reduce using rule 86 (infix_operator -> INFIX_9_R .)


state 47

    (8) declaration_list -> declaration SEMICOLON declaration_list .

    $end            reduce using rule 8 (declaration_list -> declaration SEMICOLON declaration_list .)


state 48

    (23) datadef -> DATA typename EQUAL . typesum
    (5) typesum -> . constrdef
    (11) typesum -> . constrdef BAR typesum
    (26) constrdef -> . ID_UPPER
    (27) constrdef -> . ID_UPPER type_list

    ID_UPPER        shift and go to state 68

    typesum                        shift and go to state 66
    constrdef                      shift and go to state 67

state 49

    (25) typename -> ID_UPPER lower_identifier_list .

    EQUAL           reduce using rule 25 (typename -> ID_UPPER lower_identifier_list .)


state 50

    (4) lower_identifier_list -> ID_LOWER .
    (10) lower_identifier_list -> ID_LOWER . identifier_list
    (3) identifier_list -> . identifier
    (9) identifier_list -> . identifier identifier_list
    (52) identifier -> . ID_UPPER
    (53) identifier -> . ID_LOWER

    EQUAL           reduce using rule 4 (lower_identifier_list -> ID_LOWER .)
    ID_UPPER        shift and go to state 63
    ID_LOWER        shift and go to state 64

    identifier_list                shift and go to state 69
    identifier                     shift and go to state 70

state 51

    (28) funcdef -> functype SEMICOLON funcbody .

    SEMICOLON       reduce using rule 28 (funcdef -> functype SEMICOLON funcbody .)


state 52

    (30) funcbody -> func_sig . EQUAL expr

    EQUAL           shift and go to state 71


state 53

    (31) func_sig -> prefix_def .
    (34) prefix_def -> prefix_def . ID_LOWER

    EQUAL           reduce using rule 31 (func_sig -> prefix_def .)
    ID_LOWER        shift and go to state 72


state 54

    (32) func_sig -> infix_def .

    EQUAL           reduce using rule 32 (func_sig -> infix_def .)


state 55

    (33) prefix_def -> prefix_name .

    ID_LOWER        reduce using rule 33 (prefix_def -> prefix_name .)
    EQUAL           reduce using rule 33 (prefix_def -> prefix_name .)


state 56

    (35) infix_def -> ID_LOWER . infix_name ID_LOWER
    (36) prefix_name -> ID_LOWER .
    (38) infix_name -> . infix_operator
    (57) infix_operator -> . INFIX_0_L
    (58) infix_operator -> . INFIX_0_I
    (59) infix_operator -> . INFIX_0_R
    (60) infix_operator -> . INFIX_1_L
    (61) infix_operator -> . INFIX_1_I
    (62) infix_operator -> . INFIX_1_R
    (63) infix_operator -> . INFIX_2_L
    (64) infix_operator -> . INFIX_2_I
    (65) infix_operator -> . INFIX_2_R
    (66) infix_operator -> . INFIX_3_L
    (67) infix_operator -> . INFIX_3_I
    (68) infix_operator -> . INFIX_3_R
    (69) infix_operator -> . INFIX_4_L
    (70) infix_operator -> . INFIX_4_I
    (71) infix_operator -> . INFIX_4_R
    (72) infix_operator -> . INFIX_5_L
    (73) infix_operator -> . INFIX_5_I
    (74) infix_operator -> . INFIX_5_R
    (75) infix_operator -> . INFIX_6_L
    (76) infix_operator -> . INFIX_6_I
    (77) infix_operator -> . INFIX_6_R
    (78) infix_operator -> . INFIX_7_L
    (79) infix_operator -> . INFIX_7_I
    (80) infix_operator -> . INFIX_7_R
    (81) infix_operator -> . INFIX_8_L
    (82) infix_operator -> . INFIX_8_I
    (83) infix_operator -> . INFIX_8_R
    (84) infix_operator -> . INFIX_9_L
    (85) infix_operator -> . INFIX_9_I
    (86) infix_operator -> . INFIX_9_R
